error page updated

--- a/templates/misc/Ikram Ali/error_page.html
+++ b/templates/misc/Ikram Ali/error_page.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h3>Error</h2>
+    <h1 ><center>Error.... We are working on it</center> </h1>
+    <img src="./images/loading_gif.gif" alt="Loading"class="gif">
     
-    <a class="button" href="https://www.youtube.com/">Youtube Link</a>
+    <button class="button"> Homepage </button>
+    
 </body>
 </html>
