--- a/templates/misc/Ikram Ali/style.css
+++ b/templates/misc/Ikram Ali/style.css
@@ -1,18 +1,26 @@
 body{
     background-color: aqua;
 }
-.descp{
-    background-color: azure;
-    padding: 50px;
-    border-radius: 100pt;
-}
-.button{
-    padding: 10px;
-    background-color:bisque;
-    border-radius: 10px;
-    text-decoration: none;
+.gif{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 50%;
 
 }
+.button{
+    padding: 15px 32px;
+    position: absolute;
+    left: 45%;
+    top: 95%;
+    display: inline-block;
+    background-color: forestgreen;
+    font-weight: bold;
+    font-size: large;
+    
+}
 button:hover{
-    background-color: blueviolet;
+    background-color: coral;
+    text-decoration: solid;
 }
