--- a/src/stylesheets/Login.scss
+++ b/src/stylesheets/Login.scss
@@ -1,33 +1,163 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:500);
+
+$white: #fff;
+$google-blue: #4285f4;
+$button-active-blue: #1669F2;
+
 .login {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-size: 256rem 210rem;
+  background-repeat: no-repeat;
+  background-image: url("https://www.apple.com/v/siri/d/images/overview/hero_background_large.jpg");
+  background-position: top center;
+  font-size: 1.7rem;
+}
+
+.login__banner {
+  border-radius: 50%;
+  border: 0.3rem solid #000000;
+}
+
+.login__container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #ffffff;
+  border: 0rem;
+  padding: 3rem;
+  border-radius: 0.9rem;
+  height: 40rem;
+  width: 35rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.login__text {
+  font-size: 3rem;
+  font-weight: 700;
+  padding: 1rem;
+  text-align: left;
+  margin-bottom: 1rem;
+}
+
+.login__textBox {
+  padding: 1rem;
+  font-size: 1.8rem;
+  color: #1d1d1f;
+  border: 0.1rem solid #3f1d38;
+  background-color: hsla(0, 0%, 100%, 0.1);
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+}
+
+.login__btn {
+  padding: 1rem;
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: black;
+  cursor: pointer;
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset,
+    rgba(50, 50, 93, 0.1) 0 2px 5px 0, rgba(0, 0, 0, 0.07) 0 1px 1px 0;
+  color: #ffffff;
+  font-size: 1.9rem;
+  height: 4.4rem;
+  outline: none;
+  overflow: hidden;
+  padding: 0 2.5rem;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all 0.2s, box-shadow 0.08s ease-in;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+
+  &:hover {
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
-  .login__container {
-    display: flex;
+
+  &:focus {
+    box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset,
+      rgba(50, 50, 93, 0.2) 0 6px 15px 0, rgba(0, 0, 0, 0.1) 0 2px 2px 0,
+      rgba(50, 151, 211, 0.3) 0 0 0 4px;
+  }
+
+  &:disabled {
+    cursor: default;
+  }
+}
+
+.google-btn {
+  margin: 1rem auto;
+  width: 18.4rem;
+  height: 4.2rem;
+  background-color: $google-blue;
+  border-radius: 0.2rem;
+  box-shadow: 0 0.3rem 0.4rem 0 rgba(0,0,0,.25);
+  .google-icon-wrapper {
+    position: absolute;
+    margin-top: 0.1rem;
+    margin-left: 0.1rem;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 0.2rem;
+    background-color: $white;
+  }
+  .google-icon {
+    margin-top: 1.1rem;
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+  .btn-text {
+    float: right;
+    margin: 1.1rem 1.1rem 0 0;
+    color: $white;
+    font-size: 1.4rem;
+    letter-spacing: 0.02rem;
+    font-family: "Roboto";
+  }
+  &:hover {
+    box-shadow: 0 0 0.6rem $google-blue;
+  }
+  &:active {
+    background: $button-active-blue;
+  }
+}
+
+.login .login__links {
+  margin-top: 1rem;
+  font-size: 1.5rem;
+}
+
+.link {
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+@media screen and (max-width:38rem) {
+
+  .login {
     flex-direction: column;
-    text-align: center;
-    background-color: #dcdcdc;
-    padding: 30px;
   }
-  .login__textBox {
-    padding: 10px;
-    font-size: 18px;
-    margin-bottom: 10px;
+
+  .login__banner {
+    display: none;
   }
-  .login__btn {
-    padding: 10px;
-    font-size: 18px;
-    margin-bottom: 10px;
-    border: none;
-    color: white;
-    background-color: black;
-  }
-  .login__google {
-    background-color: #4285f4;
-  }
-  .login div {
-    margin-top: 7px;
-  }
+}
