--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,11 +1,14 @@
-*, *::backdrop, *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*,
+*::backdrop,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
-    font-size: 62.5%;
-    scroll-behavior: smooth;
+  font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica",
+    "Arial", sans-serif;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
