--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
   }
   .dashboard__container {
     display: flex;
@@ -22,4 +23,9 @@
   }
   .dashboard div {
     margin-top: 7px;
+  }
+
+  .transcript {
+    font-size: 1.7rem;
+    max-width: 700px;
   }
