[develop] reset page styling added

--- a/src/stylesheets/ResetPassword.scss
+++ b/src/stylesheets/ResetPassword.scss
@@ -1,30 +1,66 @@
-.reset {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
+// .reset {
+//   height: 100vh;
+//   width: 100vw;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
+// .reset__container {
+//   display: flex;
+//   flex-direction: column;
+//   text-align: center;
+//   background-color: #dcdcdc;
+//   padding: 30px;
+// }
+// .reset__textBox {
+//   padding: 10px;
+//   font-size: 18px;
+//   margin-bottom: 10px;
+// }
+// .reset__btn {
+//   padding: 10px;
+//   font-size: 18px;
+//   margin-bottom: 10px;
+//   border: none;
+//   color: white;
+//   background-color: black;
+// }
+// .reset div {
+//   margin-top: 7px;
+// }
+
+.reset__textBox {
+  padding: 1rem;
+  width: 95%;
+  font-size: 1.8rem;
+  color: #1d1d1f;
+  border: 0.1rem solid #3f1d38;
+  background-color: hsla(0, 0%, 100%, 0.1);
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+}
+
+
+.h__center {
   align-items: center;
   justify-content: center;
+  height: 45vh;
 }
-.reset__container {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  background-color: #dcdcdc;
-  padding: 30px;
-}
-.reset__textBox {
-  padding: 10px;
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-.reset__btn {
-  padding: 10px;
-  font-size: 18px;
-  margin-bottom: 10px;
-  border: none;
-  color: white;
-  background-color: black;
-}
-.reset div {
-  margin-top: 7px;
+
+
+@media screen and (max-width: 38rem) {
+  .login {
+    flex-direction: column;
+    height: 100vh;
+    padding-bottom: 20%;
+  }
+
+  .login__banner {
+    display: none;
+  }
+  .h__center{
+    height: 35vh;
+    width: 80vw;
+    padding: 0rem;
+  }
 }
